@@ -15,25 +15,6 @@
  */
 package dev.knative.eventing.kafka.broker.dispatcher.main;
 
-import dev.knative.eventing.kafka.broker.contract.DataPlaneContract;
-import dev.knative.eventing.kafka.broker.core.reconciler.ResourcesReconciler;
-import io.vertx.core.AbstractVerticle;
-import io.vertx.core.Vertx;
-import io.vertx.junit5.VertxExtension;
-import io.vertx.junit5.VertxTestContext;
-
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.concurrent.ExecutionException;
-
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Timeout;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.api.parallel.Execution;
-import org.junit.jupiter.api.parallel.ExecutionMode;
-
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress1;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress2;
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.egress3;
@@ -44,377 +25,345 @@ import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.resourc
 import static dev.knative.eventing.kafka.broker.core.testing.CoreObjects.resource2;
 import static org.assertj.core.api.Assertions.assertThat;
 
+import dev.knative.eventing.kafka.broker.contract.DataPlaneContract;
+import dev.knative.eventing.kafka.broker.core.reconciler.ResourcesReconciler;
+import io.vertx.core.AbstractVerticle;
+import io.vertx.core.Vertx;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.concurrent.ExecutionException;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
+
 @ExtendWith(VertxExtension.class)
 @Execution(ExecutionMode.CONCURRENT)
 public class ConsumerDeployerVerticleTest {
 
-  private static final int NUM_SYSTEM_VERTICLES = 1;
+    private static final int NUM_SYSTEM_VERTICLES = 1;
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldAddResourceAndDeployVerticles(final Vertx vertx, final VertxTestContext context)
-    throws ExecutionException, InterruptedException {
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
-    final var numEgresses = numEgresses(resources);
-    final var checkpoints = context.checkpoint(1);
+    @Test
+    @Timeout(value = 2)
+    public void shouldAddResourceAndDeployVerticles(final Vertx vertx, final VertxTestContext context)
+            throws ExecutionException, InterruptedException {
+        final var resources = List.of(resource1(), resource2());
+        final var numEgresses = numEgresses(resources);
+        final var checkpoints = context.checkpoint(1);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+        final var consumerDeployer = new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resources).build())
-      .onSuccess(ignored -> context.verify(() -> {
-        assertThat(vertx.deploymentIDs()).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
-        checkpoints.flag();
-      }))
-      .onFailure(context::failNow);
-  }
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resources)
+                        .build())
+                .onSuccess(ignored -> context.verify(() -> {
+                    assertThat(vertx.deploymentIDs()).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
+                    checkpoints.flag();
+                }))
+                .onFailure(context::failNow);
+    }
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldNotDeployWhenFailedToGetVerticle(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+    @Test
+    @Timeout(value = 2)
+    public void shouldNotDeployWhenFailedToGetVerticle(final Vertx vertx, final VertxTestContext context)
+            throws ExecutionException, InterruptedException {
 
-    final var resources = List.of(
-      resource1(),
-      resource2()
-    );
-    final var checkpoint = context.checkpoint(1);
+        final var resources = List.of(resource1(), resource2());
+        final var checkpoint = context.checkpoint(1);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> {
-        throw new UnsupportedOperationException();
-      },
-      100
-    );
+        final var consumerDeployer = new ConsumerDeployerVerticle(
+                (resource, egress) -> {
+                    throw new UnsupportedOperationException();
+                },
+                100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resources).build())
-      .onFailure(ignored -> context.verify(() -> {
-        assertThat(vertx.deploymentIDs()).hasSize(NUM_SYSTEM_VERTICLES);
-        checkpoint.flag();
-      }))
-      .onSuccess(v -> context.failNow("Unexpected success"));
-  }
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resources)
+                        .build())
+                .onFailure(ignored -> context.verify(() -> {
+                    assertThat(vertx.deploymentIDs()).hasSize(NUM_SYSTEM_VERTICLES);
+                    checkpoint.flag();
+                }))
+                .onSuccess(v -> context.failNow("Unexpected success"));
+    }
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldStopVerticleWhenEgressDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+    @Test
+    @Timeout(value = 2)
+    public void shouldStopVerticleWhenEgressDeleted(final Vertx vertx, final VertxTestContext context)
+            throws ExecutionException, InterruptedException {
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addEgresses(egress1())
-        .build()
-    );
-    final var numEgressesOld = numEgresses(resourcesOld);
+        final var resourcesOld = List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .addEgresses(egress1())
+                .build());
+        final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
-    final var numEgressesNew = numEgresses(resourcesNew);
+        final var resourcesNew = List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .build());
+        final var numEgressesNew = numEgresses(resourcesNew);
 
-    final var checkpoints = context.checkpoint(2);
+        final var checkpoints = context.checkpoint(2);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+        final var consumerDeployer = new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesOld).build())
-      .onSuccess(ignored -> {
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resourcesOld)
+                        .build())
+                .onSuccess(ignored -> {
+                    context.verify(() -> {
+                        assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                        checkpoints.flag();
+                    });
 
-        context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
+                    reconciler
+                            .reconcile(DataPlaneContract.Contract.newBuilder()
+                                    .addAllResources(resourcesNew)
+                                    .build())
+                            .onSuccess(ok -> context.verify(() -> {
+                                assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                                checkpoints.flag();
+                            }))
+                            .onFailure(context::failNow);
+                })
+                .onFailure(context::failNow);
+    }
 
-        reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesNew).build())
-          .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-            checkpoints.flag();
-          }))
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
-  }
+    @Test
+    @Timeout(value = 2)
+    public void shouldStopVerticlesWhenResourceDeleted(final Vertx vertx, final VertxTestContext context)
+            throws ExecutionException, InterruptedException {
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldStopVerticlesWhenResourceDeleted(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+        final var resourcesOld = List.of(
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("1-1234")
+                        .addTopics("1-12345")
+                        .addAllEgresses(Arrays.asList(egress1(), egress2(), egress3()))
+                        .build(),
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("2-1234")
+                        .addTopics("2-12345")
+                        .addAllEgresses(Arrays.asList(egress4()))
+                        .build());
+        final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4()
-        ))
-        .build()
-    );
-    final var numEgressesOld = numEgresses(resourcesOld);
+        final var resourcesNew = List.of(DataPlaneContract.Resource.newBuilder()
+                .setUid("1-1234")
+                .addTopics("1-12345")
+                .build());
+        final var numEgressesNew = numEgresses(resourcesNew);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .build()
-    );
-    final var numEgressesNew = numEgresses(resourcesNew);
+        final var checkpoints = context.checkpoint(2);
 
-    final var checkpoints = context.checkpoint(2);
+        final var consumerDeployer = new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resourcesOld)
+                        .build())
+                .onSuccess(ignored -> {
+                    context.verify(() -> {
+                        assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                        checkpoints.flag();
+                    });
 
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesOld).build())
-      .onSuccess(ignored -> {
-        context.verify(() -> {
-          assertThat(vertx.deploymentIDs()).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
+                    reconciler
+                            .reconcile(DataPlaneContract.Contract.newBuilder()
+                                    .addAllResources(resourcesNew)
+                                    .build())
+                            .onSuccess(ok -> context.verify(() -> {
+                                assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                                checkpoints.flag();
+                            }))
+                            .onFailure(context::failNow);
+                })
+                .onFailure(context::failNow);
+    }
 
-        reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesNew).build())
-          .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-            checkpoints.flag();
-          }))
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
-  }
+    @Test
+    @Timeout(value = 2)
+    public void shouldStopAndStartVerticlesWhenEgressDeletedAndReAdded(
+            final Vertx vertx, final VertxTestContext context) throws ExecutionException, InterruptedException {
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldStopAndStartVerticlesWhenEgressDeletedAndReAdded(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+        final var resourcesOld = List.of(
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("1-1234")
+                        .addTopics("1-12345")
+                        .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                        .build(),
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("2-1234")
+                        .addTopics("2-12345")
+                        .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                        .build());
+        final var numEgressesOld = numEgresses(resourcesOld);
 
-    final var resourcesOld = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
-    final var numEgressesOld = numEgresses(resourcesOld);
+        final var resourcesNew = List.of(
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("1-1234")
+                        .addTopics("1-12345")
+                        .addAllEgresses(Arrays.asList(egress1(), egress3()))
+                        .build(),
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("2-1234")
+                        .addTopics("2-12345")
+                        .addEgresses(egress4())
+                        .build());
+        final var numEgressesNew = numEgresses(resourcesNew);
 
-    final var resourcesNew = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress3()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addEgresses(
-          egress4()
-        )
-        .build()
-    );
-    final var numEgressesNew = numEgresses(resourcesNew);
+        final var checkpoints = context.checkpoint(3);
 
-    final var checkpoints = context.checkpoint(3);
+        final var consumerDeployer = new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+        final var oldDeployments = vertx.deploymentIDs();
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resourcesOld)
+                        .build())
+                .onSuccess(ignored -> {
+                    context.verify(() -> {
+                        assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                        checkpoints.flag();
+                    });
 
-    final var oldDeployments = vertx.deploymentIDs();
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesOld).build())
-      .onSuccess(ignored -> {
+                    reconciler
+                            .reconcile(DataPlaneContract.Contract.newBuilder()
+                                    .addAllResources(resourcesNew)
+                                    .build())
+                            .onSuccess(ok -> {
+                                context.verify(() -> {
+                                    assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
+                                    assertThat(vertx.deploymentIDs()).containsAll(oldDeployments);
+                                    checkpoints.flag();
+                                });
 
-        context.verify(() -> {
-          assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
+                                reconciler
+                                        .reconcile(DataPlaneContract.Contract.newBuilder()
+                                                .addAllResources(resourcesOld)
+                                                .build())
+                                        .onSuccess(ok2 -> context.verify(() -> {
+                                            assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
+                                            checkpoints.flag();
+                                        }));
+                            })
+                            .onFailure(context::failNow);
+                })
+                .onFailure(context::failNow);
+    }
 
-        reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesNew).build())
-          .onSuccess(ok -> {
-            context.verify(() -> {
-              assertThat(vertx.deploymentIDs()).hasSize(numEgressesNew + NUM_SYSTEM_VERTICLES);
-              assertThat(vertx.deploymentIDs()).containsAll(oldDeployments);
-              checkpoints.flag();
-            });
+    @Test
+    @Timeout(value = 2)
+    public void shouldDoNothingWhenTheStateIsTheSame(final Vertx vertx, final VertxTestContext context)
+            throws ExecutionException, InterruptedException {
 
-            reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resourcesOld).build())
-              .onSuccess(ok2 -> context.verify(() -> {
-                assertThat(oldDeployments).hasSize(numEgressesOld + NUM_SYSTEM_VERTICLES);
-                checkpoints.flag();
-              }));
-          })
-          .onFailure(context::failNow);
-      })
-      .onFailure(context::failNow);
-  }
+        final var resources = List.of(
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("1-1234")
+                        .addTopics("1-12345")
+                        .addAllEgresses(Arrays.asList(egress1(), egress2()))
+                        .build(),
+                DataPlaneContract.Resource.newBuilder()
+                        .setUid("2-1234")
+                        .addTopics("2-12345")
+                        .addAllEgresses(Arrays.asList(egress4(), egress5(), egress6()))
+                        .build());
+        final var numEgresses = numEgresses(resources);
 
-  @Test
-  @Timeout(value = 2)
-  public void shouldDoNothingWhenTheStateIsTheSame(
-    final Vertx vertx,
-    final VertxTestContext context) throws ExecutionException, InterruptedException {
+        final var checkpoints = context.checkpoint(2);
 
-    final var resources = List.of(
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("1-1234")
-        .addTopics("1-12345")
-        .addAllEgresses(Arrays.asList(
-          egress1(),
-          egress2()
-        ))
-        .build(),
-      DataPlaneContract.Resource.newBuilder()
-        .setUid("2-1234")
-        .addTopics("2-12345")
-        .addAllEgresses(Arrays.asList(
-          egress4(),
-          egress5(),
-          egress6()
-        ))
-        .build()
-    );
-    final var numEgresses = numEgresses(resources);
+        final var consumerDeployer = new ConsumerDeployerVerticle((resource, egress) -> new AbstractVerticle() {}, 100);
 
-    final var checkpoints = context.checkpoint(2);
+        vertx.deployVerticle(consumerDeployer)
+                .toCompletionStage()
+                .toCompletableFuture()
+                .get();
 
-    final var consumerDeployer = new ConsumerDeployerVerticle(
-      (resource, egress) -> new AbstractVerticle() {
-      },
-      100
-    );
+        final var reconciler =
+                ResourcesReconciler.builder().watchEgress(consumerDeployer).build();
 
-    vertx.deployVerticle(consumerDeployer)
-      .toCompletionStage()
-      .toCompletableFuture()
-      .get();
+        reconciler
+                .reconcile(DataPlaneContract.Contract.newBuilder()
+                        .addAllResources(resources)
+                        .build())
+                .onSuccess(ignored -> {
+                    final var deployments = vertx.deploymentIDs();
 
-    final var reconciler = ResourcesReconciler
-      .builder()
-      .watchEgress(consumerDeployer)
-      .build();
+                    context.verify(() -> {
+                        assertThat(deployments).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
+                        checkpoints.flag();
+                    });
 
-    reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resources).build())
-      .onSuccess(ignored -> {
+                    reconciler
+                            .reconcile(DataPlaneContract.Contract.newBuilder()
+                                    .addAllResources(resources)
+                                    .build())
+                            .onSuccess(ok -> context.verify(() -> {
+                                assertThat(vertx.deploymentIDs()).containsAll(deployments);
+                                checkpoints.flag();
+                            }));
+                })
+                .onFailure(context::failNow);
+    }
 
-        final var deployments = vertx.deploymentIDs();
+    @Test
+    public void shouldThrowIfEgressesInitialCapacityIsLessOrEqualToZero(final Vertx vertx) {
+        Assertions.assertThrows(
+                IllegalArgumentException.class, () -> new ConsumerDeployerVerticle((resource, egress) -> null, -1));
+    }
 
-        context.verify(() -> {
-          assertThat(deployments).hasSize(numEgresses + NUM_SYSTEM_VERTICLES);
-          checkpoints.flag();
-        });
-
-        reconciler.reconcile(DataPlaneContract.Contract.newBuilder().addAllResources(resources).build())
-          .onSuccess(ok -> context.verify(() -> {
-            assertThat(vertx.deploymentIDs()).containsAll(deployments);
-            checkpoints.flag();
-          }));
-      })
-      .onFailure(context::failNow);
-  }
-
-  @Test
-  public void shouldThrowIfEgressesInitialCapacityIsLessOrEqualToZero(final Vertx vertx) {
-    Assertions.assertThrows(IllegalArgumentException.class, () -> new ConsumerDeployerVerticle(
-      (resource, egress) -> null,
-      -1
-    ));
-  }
-
-  private static int numEgresses(Collection<DataPlaneContract.Resource> resources) {
-    return resources.stream().mapToInt(DataPlaneContract.Resource::getEgressesCount).sum();
-  }
+    private static int numEgresses(Collection<DataPlaneContract.Resource> resources) {
+        return resources.stream()
+                .mapToInt(DataPlaneContract.Resource::getEgressesCount)
+                .sum();
+    }
 }
